# work

./: README.md  database.py  emploees.py  main.py  pyproject.toml  role.py
dto/: model.py
operations/: ddm.py  emploees.py  machines.py  materials.py  materialsmovement.py  matertialmovmentitems.py  prodexecution.py  productionMaterialAttributes.py  productionMaterialItems.py  productionMaterialTransfers.py  productionProductInventory.py  productionProductItems.py  productionProductPromotions.py  productionProductReturns.py  productionProductReviews.py  productionProductSales.py  productionProductSerialNumbers.py  productionProductSupplierContacts.py  productionProductWarranty.py  productionQualityControl.py  productionTask.py  productionWorkOrderItems.py  productionWorkOrderStages.py  productionWorkOrderStatusHistory.py  productionWorkOrders.py  productionemployeeattendance.py  productionemployeeproductivity.py  productionemployeeskills.py  productionmachinelog.py  productionmachinemaintenance.py  productionmaterialavailability.py  productionmaterialcategories.py  productionmaterialconsumption.py  productionmaterialcosts.py  productionmaterialdefects.py  productionmaterialforecast.py  productionmaterialinventory.py  productionmaterialrequestItems.py  productionmaterialrequests.py  productionmaterialreturnsreasons.py  (+27 more)
routers/: ProductionEmployeeProductivity.py  documentTypesDDM.py  employees.py  machines.py  materialMovementItems.py  materialMovements.py  materials.py  poductionWorkOrderItems.py  prodExecution.py  productgroups.py  productionDefects.py  (+58 more)
(+1 files in other folders)
