[tool.poetry]
name = "fastapi"
version = "0.0.1"
description = ""
authors = ["NONE"]
license = "NONE"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"

[tool.poetry.group.dev.dependencies]
fastapi = "^0.109.2"
requests = "^2.31.0"
SQLAlchemy = "^2.0.25"
mysql = "^0.0.3"
uvicorn = "^0.27.0.post1"
pydantic = "^2.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
